ViTables ChangeLog
==================
** Dec 04, 2008**
	Nodes copying has been updated: leaves whose dataset is not readable are not
	copied

	Deletion of views tied to overwritten nodes has been implemented.

	The status bar is properly updated now when a node is renamed in the Tree of databases pane.

** Dec 03, 2008**
	The 'Recover last session' feature is fully implemented now.

	Fixed a small bug in the splash screen.

	Added a label in the status bar for displaying info about the node currently
	selected in the Tree of databases pane.

** Dec 02, 2008**
	Implemented the capability for zooming cell contents.

	Dynamic entries under the Windows menu are now checkable and exclusive.

** Nov 30, 2008**
	Fixed a bug in the navigation of huge datasets. Now displayed data is properly
	updated when a slider drag ends and when the table is wheeled.

** Nov 13, 2008 **
	Navigation of huge datasets is now fully implemented. Every navigation
	device (vertical scrollbar, keyboard and mouse wheel) seems to work fine and
	to update displayed data when a buffer fault occurs.

** Nov 04, 2008 **
	Navigability of huge datasets has been enhanced. The selected cell is now
	properly updated when a buffer fault occurs. It means that navigating the
	table with the keyboard works fine now.

** Oct 31, 2008 **
	Huge datasets can be displayed and navigated. Several things remain to be
	done (usability enhancements) but the feature seems usable and stable.

** Oct 24, 2008 **
	Opening files by dropping their icons in the databases tree panel is fully
	implemented.

	Some annoying problems that arised when nodes were moved around in the
	databases tree panel have been fixed.

	I've started to implement the support for huge datasets.

** Oct 23, 2008 **
	Opening files by dropping their icons in the databases tree panel has been
	partially implemented.

	Fixed a couple of bugs in the Properties dialog: data types are correctly
	shown now.

	In-place renaming of nodes has been debugged.
